# SimpleArgs

./: CMakeLists.txt  README.md  simpleargs.cpp  simpleargs.h
example/: example.cpp
simpleargs/: CMakeLists.txt
simpleargs/include/: simpleargs.h
simpleargs/src/: simpleargs.cpp
tests/: CMakeLists.txt  example.cpp
